Add: Routes and Validation
